docs button mobile

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -19,6 +19,9 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 <title>{siteTitle}</title>
  <!-- ✅ Google AdSense Verification -->
  <meta name="google-adsense-account" content="ca-pub-4266046143865383">
+ <!-- ✅ Google AdSense Script -->
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4266046143865383"
+ crossorigin="anonymous"></script>
 
 {/* Icons */}
 <link href="/icon.svg" rel="icon" type="image/svg+xml" />
